minor fixes on mobile responsiveness

--- a/components/Bitlearn/Bitlearn.module.scss
+++ b/components/Bitlearn/Bitlearn.module.scss
@@ -84,12 +84,13 @@
       h2 {
         color: #000f30;
         font-size: 1.75rem;
-        max-width: 75%;
+        max-width: 28rem;
         margin-top: 0.5rem;
       }
       img {
         height: 43rem;
         width: auto;
+        object-fit: cover;
       }
       p {
         margin-top: 1.125rem;
@@ -141,6 +142,19 @@
           }
         }
       }
+    }
+    @include respondMax("tablet") {
+      &_card {
+        h2,
+        p {
+          max-width: 100%;
+        }
+      }
+    }
+  }
+  @media (max-width: 600px) {
+    p {
+      max-width: unset;
     }
   }
 }
