--- a/shared/Layout/Layout.module.scss
+++ b/shared/Layout/Layout.module.scss
@@ -82,7 +82,7 @@
       height: 45px;
       background: var(--bg);
       border-radius: 50%;
-      transform: translate(-15%, -42%);
+      transform: translate(-17%, -45%);
       z-index: -1;
     }
     &_line {
